WrapWithAdapterMethodCallFix: wrap with List.of() instead of Arrays.asList() on Java 9 and higher (IDEA-269380)
GitOrigin-RevId: f39f5c58348afb6b3c57dbc059860f940c6ec363